FTKernelAPI_SDK/FTKernel_API/FTKernelAPI.h

//////////////////////////////////////////////////////////////////////////

//定义64位无符号长整型
//Define 64bit long integer type
typedef unsigned __int64 QWORD;
//定义读取Torrent文件的句柄
//Define Torrent file handle
typedef LONG *HTorrentFile;
//定义生成Torrent文件的句柄
//Define Making Torrent file handle
typedef LONG *HMakeTorrent;
	
	//获取piece块的大小
	//Get the size of piece
	FTKERNELAPI_API DWORD BTAPI FTK_Torrent_GetPieceSize( HTorrentFile hTorrentFile );
	
	//获取文件的大小
	//Get the total file size to transfer
	FTKERNELAPI_API QWORD BTAPI FTK_Torrent_GetFileSize( HTorrentFile hTorrentFile );
	
	//Piece块的个数
	//Get the total number of piece
	FTKERNELAPI_API DWORD BTAPI FTK_Torrent_GetPieceCount( HTorrentFile hTorrentFile );
	
	//获取Piece Hash 的列表
	//Get a pointer to piece hash list
	FTKERNELAPI_API const BYTE *BTAPI FTK_Torrent_GetPieceHashList( HTorrentFile hTorrentFile );
	//释放PieceHash列表
	//Release piece hash memory
	FTKERNELAPI_API void BTAPI FTK_Torrent_FreePieceHashList( HTorrentFile hTorrentFile );
	
	//获取Torrent文件的语言编码
	//Get language code page of torrent file
	FTKERNELAPI_API UINT BTAPI FTK_Torrent_GetLanCodePage( HTorrentFile hTorrentFile );
	
	//////////////////////////////////////////////////////////////////////////
	//制作Torrent文件的函数列表
	//Create torrent file interface
	
	//打开一个制作torrent文件的句柄
	//Open a making torrent handle
	FTKERNELAPI_API HMakeTorrent BTAPI FTK_MT_Open();
	
	//关闭打开的制作Torrent文件的句柄
	//Close a making torrent handle
	FTKERNELAPI_API void BTAPI FTK_MT_Close( HMakeTorrent hMakeTorrent );
	
	//执行生成对象的操作
	//Start to making torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_MT_MakeTorrent( HMakeTorrent hMakeTorrent );
	
	//停止Torrent文件制作
	//Stop making torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_StopMake( HMakeTorrent hMakeTorrent );
	
	//获取制作文件的进度
	//Get progress of making torrent file
	FTKERNELAPI_API double BTAPI FTK_MT_GetMTProgress( HMakeTorrent hMakeTorrent );
	
	//另存为Torrent文件
	//Save as a torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_MT_SaveAsTorrentFile( HMakeTorrent hMakeTorrent, const char * lpszFileName, const char * lpszDesKey = NULL );
	
	//设置 annouce url
	//Set a main announce url
	FTKERNELAPI_API void BTAPI FTK_MT_SetAnnounceUrl( HMakeTorrent hMakeTorrent, const char * lpszValue );
	
	//添加额外的Announce 列表
	//Add a announce list
	FTKERNELAPI_API void BTAPI FTK_MT_AddAnnounceList( HMakeTorrent hMakeTorrent, const char * Announces[], int nCount );
	
	//添加额外的Announce 列表, example: announce1;announce2;announce3;
	//Add a announce list, example: announce1;announce2;announce3;
	FTKERNELAPI_API void BTAPI FTK_MT_AddAnnounceList2( HMakeTorrent hMakeTorrent, const char * lpszAnnounces );
	
	//清空额外的Announce 列表
	//Clear all announce list
	FTKERNELAPI_API void BTAPI FTK_MT_ClearAnnounceList( HMakeTorrent hMakeTorrent );
	
	//设置 注释
	//Set comments
	FTKERNELAPI_API void BTAPI FTK_MT_SetComments( HMakeTorrent hMakeTorrent, const char * lpszValue );
	
	//设置piece块的大小
	//Set piece size to making torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_SetPieceSize( HMakeTorrent hMakeTorrent, DWORD dwPieceSize );
	
	//设置torrent中的文件
	//Set the sourece file to making torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_SetFile( HMakeTorrent hMakeTorrent, const char * lpszFileName );
	
	//设置torrent中的文件目录(多个文件)
	//Set the source path to making torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_SetPath( HMakeTorrent hMakeTorrent, const char * lpszPathName );
	
	//设置Torrent文件的语言代码(只对文件名称, 注释等有效)
	//Set language code of torrent file
	FTKERNELAPI_API void BTAPI FTK_MT_SetLangCodePage( HMakeTorrent hMakeTorrent, UINT nCodePage = CP_ACP );
	
	//////////////////////////////////////////////////////////////////////////
	//Tracker interface, to get status of one torrent from tracker: peer count/seed count
	
	//HTTP tracker接口， 用于获取http Tracker某任务的状态信息
	//HTTP Tracker interface, to get status of one torrent from http tracker
	FTKERNELAPI_API BOOL BTAPI FTK_Tracker_Http1( const char * lpszTracker, const unsigned char *pInfoHash, QWORD qwFileSize, UINT &nPeerCount, UINT &nSeedCount, BOOL &bNetwordErr, const char * lpszErrInfo = NULL, int nLength = 0 );
	
	//HTTP tracker接口， 用于获取http Tracker某任务的状态信息
	//HTTP Tracker interface, to get status of one torrent from http tracker
	FTKERNELAPI_API BOOL BTAPI FTK_Tracker_Http2( const char * lpszTorrentFileName, UINT &nPeerCount, UINT &nSeedCount, BOOL &bNetwordErr, const char * lpszErrInfo = NULL, int nLength = 0 );
	
	//UDP tracker接口， 用于获取UDP Tracker某任务的状态信息
	//UDP Tracker interface, to get status of one torrent from UDP tracker
	FTKERNELAPI_API BOOL BTAPI FTK_Tracker_UDP1( const char * lpszTracker, const unsigned char *pInfoHash, QWORD qwFileSize, UINT &nPeerCount, UINT &nSeedCount, BOOL &bNetwordErr, const char * lpszErrInfo = NULL, int nLength = 0 );
	
	//UDP tracker接口， 用于获取UDP Tracker某任务的状态信息
	//UDP Tracker interface, to get status of one torrent from UDP tracker
	FTKERNELAPI_API BOOL BTAPI FTK_Tracker_UDP2( const char * lpszTorrentFileName, UINT &nPeerCount, UINT &nSeedCount, BOOL &bNetwordErr, const char * lpszErrInfo = NULL, int nLength = 0 );
	
	//////////////////////////////////////////////////////////////////////////
	//Disk cache Settings
	
	//Set Disk cache size
	//设置磁盘缓存的大小
	FTKERNELAPI_API void BTAPI FTK_Disk_SetCache( UINT nMinCacheSize, UINT nMaxCacheSize, UINT nPhyMemorySize );
	
	//////////////////////////////////////////////////////////////////////////
	//Windows environment related interfaces
	
	//Get local machine ip address(get the first ip or best ip if there are more than one NICs)
	//获取本机的IP地址(在有多个的情况下，选择第一个，或者按照一定算法选择最合适的一个)
	FTKERNELAPI_API const char * BTAPI FTK_Win_GetLocalIP( BOOL &bPrivateIP );
	
	//Open Windows ICS/ICF(Windows XP/Windows 2003) 
	//打开操作系统的网络连接防火墙和网络连接共享(Windows XP/Windows 2003)
	FTKERNELAPI_API BOOL BTAPI FTK_Win_OpenWinXPICSF( unsigned short nPort, BOOL &bOpenFirewall, BOOL &bPortMapping, BYTE nProtocol = WCXT_TCP_PORT, const char * lpszIP = NULL, const char * lpszAppName = NULL );
	
	//Open UPnP port mapping(Win9x/WinME/Win2000/WinXP/Win2003)
	//执行对于支持UPnP协议的Router进行自动的端口映射配置(内网处于Router后的机器必用)
	FTKERNELAPI_API BOOL BTAPI FTK_Win_AddUPnPPortMapping( unsigned short nPort, BYTE nProtocol = WCXT_TCP_PORT, const char * lpszIP = NULL );
	
	//Patch Windows XP SP2 tcpip.sys file for best TCP/IP performance
	//对于Windows XP SP2 的tcpip.sys打补丁，破解连接数的限制，提高网络性能
	FTKERNELAPI_API int BTAPI FTK_Win_PacthSP2TCPIPLimitFile( int nLimit = 10 );