FTKernelAPI_SDK/CSharpDemo/FTKernelAPI.cs

	
		//获取piece块的大小
		//Get the size of piece
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetPieceSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
		public static extern uint FTK_Torrent_GetPieceSize( uint hTorrentFile );

		//获取文件的大小
		//Get the total file size to transfer
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetFileSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern ulong FTK_Torrent_GetFileSize( uint hTorrentFile );
		
		//Piece块的个数
		//Get the total number of piece
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetPieceCount", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
  　　　　public static extern uint FTK_Torrent_GetPieceCount( uint hTorrentFile );

		//获取Piece Hash 的列表
		//Get a pointer to piece hash list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetPieceHashList", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern byte [] FTK_Torrent_GetPieceHashList( uint hTorrentFile );

		//释放PieceHash列表
		//Release piece hash memory
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_FreePieceHashList", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Torrent_FreePieceHashList( uint hTorrentFile );
	
		//获取Torrent文件的语言编码
		//Get language code page of torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Torrent_GetLanCodePage", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_Torrent_GetLanCodePage( uint hTorrentFile );

		//////////////////////////////////////////////////////////////////////////
		//制作Torrent文件的函数列表
		//Create torrent file interface
	
		//打开一个制作torrent文件的句柄
		//Open a making torrent handle
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_Open", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern uint FTK_MT_Open();
	
		//关闭打开的制作Torrent文件的句柄
		//Close a making torrent handle
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_Close", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_Close( uint hMakeTorrent );
	
		//执行生成对象的操作
		//Start to making torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_MakeTorrent", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_MT_MakeTorrent( uint hMakeTorrent );
	
		//停止Torrent文件制作
		//Stop making torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_StopMake", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_StopMake( uint hMakeTorrent );
	
		//获取制作文件的进度
		//Get progress of making torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_GetMTProgress", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern double FTK_MT_GetMTProgress( uint hMakeTorrent );
	
		//另存为Torrent文件
		//Save as a torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_SaveAsTorrentFile", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_MT_SaveAsTorrentFile( uint hMakeTorrent, string sFileName, string sDesKey );
	
		//设置 annouce url
		//Set a main announce url
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_SetAnnounceUrl", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_SetAnnounceUrl( uint hMakeTorrent, string sValue );
	
		//添加额外的Announce 列表
		//Add a announce list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_AddAnnounceList", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_AddAnnounceList( uint hMakeTorrent, string [] Announces, int nCount );
	
		//添加额外的Announce 列表, example: announce1;announce2;announce3;
		//Add a announce list, example: announce1;announce2;announce3;
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_AddAnnounceList2", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_AddAnnounceList2( uint hMakeTorrent, string sAnnounces );
	
		//清空额外的Announce 列表
		//Clear all announce list
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_ClearAnnounceList", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_ClearAnnounceList( uint hMakeTorrent );
	
		//设置 注释
		//Set comments
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_SetComments", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_SetComments( uint hMakeTorrent, string sValue );
	
		//设置piece块的大小
		//Set piece size to making torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_SetPieceSize", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_SetPieceSize( uint hMakeTorrent, uint nPieceSize );
	
		//设置torrent中的文件
		//Set the sourece file to making torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_SetFile", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_SetFile( uint hMakeTorrent, string sFileName );
	
		//设置torrent中的文件目录(多个文件)
		//Set the source path to making torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_SetPath", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_SetPath( uint hMakeTorrent, string sPathName );
	
		//设置Torrent文件的语言代码(只对文件名称, 注释等有效)
		//Set language code of torrent file
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_MT_SetLangCodePage", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_MT_SetLangCodePage( uint hMakeTorrent, uint nCodePage );
	
		//////////////////////////////////////////////////////////////////////////
		//Tracker interface, to get status of one torrent from tracker: peer count/seed count
	
		//HTTP tracker接口， 用于获取http Tracker某任务的状态信息
		//HTTP Tracker interface, to get status of one torrent from http tracker
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Tracker_Http1", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Tracker_Http1( string sTracker, string sInfoHash, ulong ulFileSize, ref uint nPeerCount, ref uint nSeedCount, ref bool bNetwordErr, string sErrInfo, int nLength );
	
		//HTTP tracker接口， 用于获取http Tracker某任务的状态信息
		//HTTP Tracker interface, to get status of one torrent from http tracker
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Tracker_Http2", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Tracker_Http2( string sTorrentFileName, ref uint nPeerCount, ref uint nSeedCount, ref bool bNetwordErr, string  sErrInfo, int nLength );
	
		//UDP tracker接口， 用于获取UDP Tracker某任务的状态信息
		//UDP Tracker interface, to get status of one torrent from UDP tracker
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Tracker_UDP1", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Tracker_UDP1( string sTracker, string sInfoHash, ulong ulFileSize, ref uint nPeerCount, ref uint nSeedCount, ref bool bNetwordErr, string sErrInfo, int nLength );
	
		//UDP tracker接口， 用于获取UDP Tracker某任务的状态信息
		//UDP Tracker interface, to get status of one torrent from UDP tracker
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Tracker_UDP2", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Tracker_UDP2( string sTorrentFileName, ref uint nPeerCount, ref uint nSeedCount, ref bool bNetwordErr, string sErrInfo, int nLength );
	
		//////////////////////////////////////////////////////////////////////////
		//Disk cache Settings
	
		//Set Disk cache size
		//设置磁盘缓存的大小
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Disk_SetCache", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern void FTK_Disk_SetCache( uint nMinCacheSize, uint nMaxCacheSize, uint nPhyMemorySize );
	
		//////////////////////////////////////////////////////////////////////////
		//Windows environment related interfaces
	
		//Get local machine ip address(get the first ip or best ip if there are more than one NICs)
		//获取本机的IP地址(在有多个的情况下，选择第一个，或者按照一定算法选择最合适的一个)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Win_GetLocalIP", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern string FTK_Win_GetLocalIP( ref bool bPrivateIP );
	
		//Open Windows ICS/ICF(Windows XP/Windows 2003) 
		//打开操作系统的网络连接防火墙和网络连接共享(Windows XP/Windows 2003)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Win_OpenWinXPICSF", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Win_OpenWinXPICSF( ushort nPort, ref bool bOpenFirewall, ref bool bPortMapping, byte nProtocol, string  sIP, string sAppName );
	
		//Open UPnP port mapping(Win9x/WinME/Win2000/WinXP/Win2003)
		//执行对于支持UPnP协议的Router进行自动的端口映射配置(内网处于Router后的机器必用)
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Win_AddUPnPPortMapping", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern bool FTK_Win_AddUPnPPortMapping( ushort nPort, byte nProtoco, string sIP );
	
		//Patch Windows XP SP2 tcpip.sys file for best TCP/IP performance
		//对于Windows XP SP2 的tcpip.sys打补丁，破解连接数的限制，提高网络性能
		[DllImport("FTKernelAPI.dll", 
  　　　　EntryPoint="FTK_Win_PacthSP2TCPIPLimitFile", 
  　　　　CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)] 
		public static extern int FTK_Win_PacthSP2TCPIPLimitFile( int nLimit );
	
		//////////////////////////////////////////////////////////////////////////
	}
}
